Fix: max 3 posts in index, reduce v spacing, fix duplicate in posts.html

--- a/style.css
+++ b/style.css
@@ -257,7 +257,7 @@ html.dark-mode .link a:hover {
 }
 
 .more-link {
-    margin-top: 1.5rem;
+    margin-top: 0.5rem;
 }
 
 .more-link a {
